--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,61 @@
 html{
-    background: url()
+    background: url(http://i.imgur.com/b9r5sEL.jpg) bottom center no-repeat;
+    background-size: cover;
+    box-sizing: border-box;
+    font-family: 'Gugi', cursive;   
+}
+.title{
+    text-align: center;
+    font-size: 40px;
+    color: greenyellow;
+    padding: 5px 5px;
+    border: 3px dashed #FFF;
+    background-color: rgba(0,0,0,0.6);
+    margin: 0 40px;
+    margin-top: 80px;
+}
+.notes{
+    min-height: 100vh;
+    display: flex;
+    flex: 1;
+    align-items: center;
+    justify-content: center;
+    
+    .notes__note{
+        margin: 15px;
+        padding: 10px;
+        border: 3px solid #000;
+        border-radius: 5px;
+        background-color: rgba(0,0,0,0.6);
+        width: 100px;
+        display: block;
+        margin-bottom: 150px;
+        overflow: hidden;
+        box-sizing: border-box;
+        transition: linear 0.07s;
+        
+        .notes__kbd{
+            display: inline-block;
+            font-size: 40px;
+            text-align: center;
+            width: 100%;
+            color: #FFF;
+        }
+        
+        .notes__title{
+            display: inline-block;
+            font-size: 15px;
+            text-align: center;
+            width: 100%;
+            color: greenyellow;
+
+        }
+    
+    }
+    .js-note-active{
+        transform: scale(1.4);
+        border: 4px groove greenyellow;
+        box-shadow: 0 0 1rem greenyellow;
+        
+    }
 }
